--- a/blog.html
+++ b/blog.html
@@ -450,7 +450,7 @@ function turnstyleChallengeCallback(){
     </article>
     
 <footer class="px-2 md:px-0 mt-8 mb-2 custom-domain" id="footer">
-<small class="db text-sm block"><span>anton</span> <span>© 2024 </span></small>
+<small class="db text-sm block"><span>ʕง•ᴥ•ʔง</span> <span>© 2024 </span></small>
 
 <small class="text-sm block mt-2">Made with <a class="link" href="/box">Terminal</a> and Macbook</small></footer>
 <script>
