--- a/index.html
+++ b/index.html
@@ -380,6 +380,9 @@
                      <li class="dib v-top">
                           <a itemProp="url" href=/myblog class='dib link dim py-0 px-0 pr-2'>follow me</a>
                       </li>
+                      <li class="dib v-top">
+                          <a itemProp="url" href=/thenotes  class='dib link dim py-0 px-0 pr-2'>notes</a>
+                      </li>
                   </ul>
               </nav>
             
@@ -423,7 +426,7 @@
           </div>
         </article>
         <footer class="px-2 md:px-0 mt-8 mb-2 custom-domain" id="footer">
-           <small class="db text-sm block"><span>anton</span> <span>© 2024 </span></small>
+           <small class="db text-sm block"><span>ʕง•ᴥ•ʔง</span> <span>© 2024 </span></small>
            <small class="text-sm block mt-2">Made with <a class="link" href="/box">Terminal</a> and Macbook</small>
        </footer>
         <script>
