--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="msapplication-TileImage" content="https://cdn.alto.so/favicons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="https://cdn.alto.so/css/styles.css"/>
+    <link rel="stylesheet" href="/css/styles.css"/>
     <link rel="alternate" type="application/rss+xml" title="RSS Feed for anton's site" href="/feed.xml"></link>
     <meta name="view-transition" content="same-origin" />
     <style>
